--- a/js/sobre_el_programador.html
+++ b/js/sobre_el_programador.html
@@ -16,7 +16,7 @@
 
     <div class="sobre-mi">
         <div>
-            <img src="../img/gatito.jpeg" alt="Este soy yo">
+            <img src="https://github.com/24040011-cristian/SH4-U2-AW/blob/main/img/gatito.jpeg" alt="Este soy yo">
             <p>Cristian Avendaño del Solar</p>
         </div>
         <div>
@@ -83,4 +83,5 @@
 
 </body>
 </html>
+
 
