--- a/js/sobre_el_programador.html
+++ b/js/sobre_el_programador.html
@@ -16,7 +16,7 @@
 
     <div class="sobre-mi">
         <div>
-            <img src="img/gatito.jpeg" alt="Este soy yo">
+            <img src="main/img/gatito.jpeg" alt="Este soy yo">
             <p>Cristian Avendaño del Solar</p>
         </div>
         <div>
@@ -83,6 +83,7 @@
 
 </body>
 </html>
+
 
 
 
